tests/baselines/reference/missingCommaInTemplateStringsArray.errors.txt
tests/cases/compiler/missingCommaInTemplateStringsArray.ts(2,5): error TS2796: It is likely that you are missing a comma to separate these two template expressions. They form form a tagged template expression which is invalid.


==== tests/cases/compiler/missingCommaInTemplateStringsArray.ts (1 errors) ====
    var array = [
        `template string 1`
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2796: It is likely that you are missing a comma to separate these two template expressions. They form form a tagged template expression which is invalid.
        `template string 2`
      ];